force-app/main/default/objects/CalendlyAction__c/fields/CustomResponse2__c.field-meta.xml
<CustomField>
    <fullName>CustomResponse2__c</fullName>
    <label>CustomResponse2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>