force-app/main/default/objects/CalendlyAction__c/fields/CustomResponse3__c.field-meta.xml
<CustomField>
    <fullName>CustomResponse3__c</fullName>
    <label>CustomResponse3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>